Add `Clutch Up Switch` option to`Activation Mode` combobox on `Shift Torque Reduction (Flat Shift)` dialog #7117

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -5011,11 +5011,17 @@ dialog = tcuControls, "Transmission Settings"
 		field = "Clutch Down Inverted",	clutchDownPinInverted,	{clutchDownPin != 0}
 		field = "Clutch Down Mode",		clutchDownPinMode,		{clutchDownPin != 0}
 
+	dialog = ClutchUpDialog, "Clutch Up"
+		field = "Clutch Up",			clutchUpPin
+		field = "Clutch Up Inverted",	clutchUpPinInverted,	{clutchUpPin != 0}
+		field = "Clutch Up Mode",		clutchUpPinMode,		{clutchUpPin != 0}
+
 	dialog = TorqueReductionActivationModeDialog, "Activation", yAxis
 		field = "Activation Mode",	torqueReductionActivationMode
 		panel = TorqueReductionButtonDialog,	{torqueReductionActivationMode == @@torqueReductionActivationMode_e_TORQUE_REDUCTION_BUTTON@@}
 		panel = LaunchButtonDialog,				{torqueReductionActivationMode == @@torqueReductionActivationMode_e_LAUNCH_BUTTON@@}
 		panel = ClutchDownDialog,				{torqueReductionActivationMode == @@torqueReductionActivationMode_e_TORQUE_REDUCTION_CLUTCH_DOWN_SWITCH@@}
+		panel = ClutchUpDialog, 				{torqueReductionActivationMode == @@torqueReductionActivationMode_e_TORQUE_REDUCTION_CLUTCH_UP_SWITCH@@}
 
 	dialog = TorqueReductionSettings, "Settings"
 	    field = "Limit Torque Reduction Time",		limitTorqueReductionTime
@@ -5028,7 +5034,7 @@ dialog = tcuControls, "Transmission Settings"
 	dialog = ShiftTorqueReductionSettingsDialog, "", yAxis
 		field = "Enable Shift Torque Reduction",		torqueReductionEnabled
 		panel = TorqueReductionActivationModeDialog,	{torqueReductionEnabled == 1}
-		panel = TorqueReductionSettings,				{torqueReductionEnabled == 1 && ((torqueReductionActivationMode == @@torqueReductionActivationMode_e_TORQUE_REDUCTION_BUTTON@@) || (torqueReductionActivationMode == @@torqueReductionActivationMode_e_LAUNCH_BUTTON@@ && launchActivatePin != 0) || (torqueReductionActivationMode == @@torqueReductionActivationMode_e_TORQUE_REDUCTION_CLUTCH_DOWN_SWITCH@@))}
+		panel = TorqueReductionSettings,				{torqueReductionEnabled == 1 && ((torqueReductionActivationMode == @@torqueReductionActivationMode_e_TORQUE_REDUCTION_BUTTON@@) || (torqueReductionActivationMode == @@torqueReductionActivationMode_e_LAUNCH_BUTTON@@ && launchActivatePin != 0) || (torqueReductionActivationMode == @@torqueReductionActivationMode_e_TORQUE_REDUCTION_CLUTCH_DOWN_SWITCH@@) || (torqueReductionActivationMode == @@torqueReductionActivationMode_e_TORQUE_REDUCTION_CLUTCH_UP_SWITCH@@))}
 
 	dialog = ShiftTorqueReductionDialog, "", border
 		panel = ShiftTorqueReductionSettingsDialog, West
