if_ts_show_mc33810_cs only:hellen154hyundai_f7

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -3276,8 +3276,8 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "trigger stimulator output #2",			triggerSimulatorPins2
 		field = camSimulatorPin,                    camSimulatorPin
 		field = "tle6240_cs",							tle6240_cs
-		field = "mc33810_cs",							mc33810_cs1
-		field = "mc33810_csPinMode",					mc33810_csPinMode
+		field = "mc33810_cs",							mc33810_cs1@@if_ts_show_mc33810_cs
+		field = "mc33810_csPinMode",					mc33810_csPinMode@@if_ts_show_mc33810_cs
 		field = "tle6240 SPI",							tle6240spiDevice
 
 	dialog = allPins1_2
@@ -5144,8 +5144,8 @@ dialog = tcuControls, "Transmission Settings"
 
 	dialog = mc33810Dialog, "MC33810 IGN/INJ driver"
 		field = "SPI settings"
-		field = "mc33810_cs",								mc33810_cs1
-		field = "mc33810_csPinMode",						mc33810_csPinMode
+		field = "mc33810_cs",								mc33810_cs1@@if_ts_show_mc33810_cs
+		field = "mc33810_csPinMode",						mc33810_csPinMode@@if_ts_show_mc33810_cs
 		field = "Chip configuration"
 		field = "Nominal coil charge current (3..10.75)",	mc33810Nomi
 		field = "Maximum coil charge current (6..21)",		mc33810Maxi
