Handle fuel splashing (closes #7180)

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -3220,9 +3220,10 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Throttle inlet pressure sensor",			throttleInletPressureChannel
 		field = "Compressor discharge pressure sensor",		compressorDischargePressureChannel
 
-	dialog = fuelLevelDialog,				"Fuel Level Sensor"
-		field = "Input channel",						fuelLevelSensor
-;		field = "Filter Alpha", fuelLevelAveragingAlpha
+	dialog = fuelLevelDialog,		"Fuel Level Sensor"
+		field = "Input channel",	fuelLevelSensor
+		field = "Filter Alpha",		fuelLevelAveragingAlpha
+		field = "Update period",	fuelLevelUpdatePeriodSec
 		panel = fuelLevelCurve
 
 ;
