--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2599,7 +2599,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 
 	dialog = triggerConfiguration_gap, "Trigger Gap Override"
 		field = "!This is a pretty advanced feature for when you are debugging trigger synchronization"
-		field = "Override well known trigger gaps",	overrideTriggerGaps
+		field = "Override well known trigger gaps",	overrideTriggerGaps@@if_ts_show_trigger_gap_override_flag
 		field = gapTrackingLengthOverride,				gapTrackingLengthOverride, { overrideTriggerGaps == 1 }
 		field = "First gap from",	triggerGapOverrideFrom1,    { overrideTriggerGaps == 1 }
 		field = "First gap to",		triggerGapOverrideTo1,      { overrideTriggerGaps == 1 }
