ts_show_tsp_pps_limits only:uaefi

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -3114,7 +3114,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "TPS/PPS Error Detection Threshold",  etbSplit
 
 	dialog = tpsSensorLeft
-		panel = tpsPpsLimits
+		panel = tpsPpsLimits@@if_ts_show_tsp_pps_limits
 		panel = tpsNum1
 		panel = tpsSent1@@if_ts_show_tps_sent
 		panel = tpsNum2@@if_ts_show_tps2
@@ -3132,7 +3132,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Down (WOT) voltage",					throttlePedalSecondaryWOTVoltage
 		field = "Ford/Toyota redundant PPS mode",			useFordRedundantPps@@if_ts_show_ford_toyota_tps_pps
 		field = "Secondary PPS maximum",				ppsSecondaryMaximum, {useFordRedundantPps}@@if_ts_show_ford_toyota_tps_pps
-		panel = tpsPpsLimits
+		panel = tpsPpsLimits@@if_ts_show_tsp_pps_limits
 
 	dialog = pedalGauges
 		gauge = pedalPositionGauge
