Fuel Level Sensor should have a RAW option fix #6979 only:uaefi

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1730,6 +1730,7 @@ gaugeCategory = Sensors - Raw
 	rawAuxTemp2Gauge			= rawAuxTemp2		, "Raw Aux Temp2",			"V", 0, 5, 0, 0, 5, 5, 3, 0
 	rawAmbientTempGauge			= rawAmbientTemp		, "Raw Ambient Temp",			"V", 0, 5, 0, 0, 5, 5, 3, 0
 	rawOilPressureGauge  = rawOilPressure, "Raw Oil Pressure",  "V", 0, 5, 0, 0, 5, 5, 3, 0
+	rawFuelLevelGauge  = rawFuelLevel, "Raw Fuel Level",  "V", 0, 5, 0, 0, 5, 5, 3, 0
 	rawAcPressureGauge  = rawAcPressure, "Raw A/C Pressure",  "V", 0, 5, 0, 0, 5, 5, 3, 0
 	rawIdlePositionSensorGauge  = rawIdlePositionSensor, "Raw Idle Position",  "V", 0, 5, 0, 0, 5, 5, 3, 0
 	rawWastegatePositionGauge = rawWastegatePosition,"Raw Wastegate Position","V", 0, 5, 0, 0, 5, 5, 3, 0
