@@if_ts_show_air_conditioning only:uaefi

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -3838,8 +3838,8 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 
 	dialog = idleOpenLoop, "Open Loop Idle"
 		slider = "Open loop base position",				manIdlePosition, horizontal
-		field = "A/C adder",							acIdleExtraOffset
-		field = "A/C RPM target",						acIdleRpmTarget
+		field = "A/C adder",							acIdleExtraOffset@@if_ts_show_air_conditioning
+		field = "A/C RPM target",						acIdleRpmTarget@@if_ts_show_air_conditioning
 		field = "Fan #1 adder",							fan1ExtraIdle
 		field = "Fan #2 adder",							fan2ExtraIdle
 		field = "Dashpot/Taper Initial IAC Adder",	    iacByTpsTaper
