EFI_IDLE_PID_CIC not very alive only:uaefi

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -3832,8 +3832,8 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "iTerm Min",							idlerpmpid_iTermMin
 		field = "iTerm Max",							idlerpmpid_iTermMax
 		field = "PID Extra for low RPM",				pidExtraForLowRpm
-		field = idleIncrementalPidCic,					idleIncrementalPidCic
-		field = "use Cic Pid",							useCicPidForIdle
+		field = idleIncrementalPidCic,					idleIncrementalPidCic@@if_ts_cic_idle
+		field = "use Cic Pid",							useCicPidForIdle@@if_ts_cic_idle
 		field = "Use IAC PID Multiplier Table",			useIacPidMultTable
 
 	dialog = idleOpenLoop, "Open Loop Idle"
