--- a/firmware/integration/LiveData.yaml
+++ b/firmware/integration/LiveData.yaml
@@ -35,6 +35,14 @@ Usages:
     prepend: integration/rusefi_config_shared.txt
     constexpr: "engine->ignitionState"
 
+  - name: prime_injection
+    cppFileName: prime_injection
+    java: PrimeController.java
+    folder: controllers/engine_cycle
+    prepend: integration/rusefi_config_shared.txt
+    constexpr: "___engine.module<PrimeController>()"
+    isPtr: true
+
   - name: knock_controller
     java: KnockController.java
     folder: controllers/engine_cycle
