enable `11.2.3. Full Optimized - High Speed` `OutputChannel capture` mode #7202

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -54,7 +54,7 @@ enable2ndByteCanID = false
 	defaultRuntimeRecordPerSec = 100;
 ;#if CONN_SLOW
 ;#else
-	maxUnusedRuntimeRange = 1000;
+;	maxUnusedRuntimeRange = 1000;
 ;#endif
 
 	; Set default IP/port to our IP/port
@@ -200,9 +200,9 @@ enable2ndByteCanID = false
 	scatteredOchGetCommand = @@TS_GET_SCATTERED_GET_COMMAND_char@@
 	scatteredOffsetArray = highSpeedOffsets
 ;#if CONN_SLOW
-;	scatteredGetEnabled = { 1 }
+	scatteredGetEnabled = { 1 }
 ;#else
-	scatteredGetEnabled = { 0 }
+;	scatteredGetEnabled = { 0 }
 ;#endif
 
 ;
