add `Override VE table load axis` combobox to `VE` dialog #7182

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4812,9 +4812,13 @@ dialog = tcuControls, "Transmission Settings"
 		text = "More about rusefi on the web"
 		webHelp = "https://rusefi.com/"
 
-	dialog = veTableDialog
-		topicHelp = "veTableDialogHelp"
-		panel = veTableTbl, South
+	dialog = veOverrideModeSelector, ""
+		field = "Override VE table load axis", veOverrideMode
+
+	dialog = veTableDialog, "", border
+		topicHelp	= "veTableDialogHelp"
+		panel		= veOverrideModeSelector, North
+		panel		= veTableTbl, Center
 
 	dialog = veTableDialog3D, @@VE_TABLE_NAME@@
 		topicHelp = "veTableDialogHelp"
