--- a/firmware/integration/LiveData.yaml
+++ b/firmware/integration/LiveData.yaml
@@ -124,7 +124,7 @@ Usages:
     java: FanControl.java
     folder: controllers/actuators
     output_name: [ "fan1", "fan2" ]
-    constexpr: "engine->module<FanControl1>()"
+    constexpr: ["engine->module<FanControl1>()", "engine->module<FanControl2>()"]
     isPtr: true
 
   - name: fuel_pump_control
@@ -172,7 +172,7 @@ Usages:
     folder: controllers/trigger
     prepend: integration/rusefi_config_shared.txt
     output_name: [ "trg", "vvt1i", "vvt1e", "vvt2i", "vvt2e" ]
-    constexpr: "engine->triggerCentral.triggerState"
+    constexpr: [ "engine->triggerCentral.triggerState", "engine->triggerCentral.vvtState[0][0]","engine->triggerCentral.vvtState[0][1]","engine->triggerCentral.vvtState[1][0]","engine->triggerCentral.vvtState[1][1]"]
 
   - name: trigger_state_primary
     cppFileName: trigger_decoder
