--- a/firmware/integration/LiveData.yaml
+++ b/firmware/integration/LiveData.yaml
@@ -171,6 +171,7 @@ Usages:
     java: TriggerState.java
     folder: controllers/trigger
     prepend: integration/rusefi_config_shared.txt
+    conditional_compilation: "EFI_SHAFT_POSITION_INPUT"
     output_name: [ "trg", "vvt1i", "vvt1e", "vvt2i", "vvt2e" ]
     constexpr: [ "engine->triggerCentral.triggerState", "engine->triggerCentral.vvtState[0][0]","engine->triggerCentral.vvtState[0][1]","engine->triggerCentral.vvtState[1][0]","engine->triggerCentral.vvtState[1][1]"]
 
