--- a/firmware/integration/LiveData.yaml
+++ b/firmware/integration/LiveData.yaml
@@ -126,6 +126,7 @@ Usages:
     output_name: [ "fan1", "fan2" ]
     constexpr: ["engine->module<FanControl1>()", "engine->module<FanControl2>()"]
     isPtr: true
+    conditional_compilation: "FULL_SD_LOGS"
 
   - name: fuel_pump_control
     cppFileName: fuel_pump
@@ -171,7 +172,7 @@ Usages:
     java: TriggerState.java
     folder: controllers/trigger
     prepend: integration/rusefi_config_shared.txt
-    conditional_compilation: "EFI_SHAFT_POSITION_INPUT"
+    conditional_compilation: "EFI_SHAFT_POSITION_INPUT && FULL_SD_LOGS"
     output_name: [ "trg", "vvt1i", "vvt1e", "vvt2i", "vvt2e" ]
     constexpr: [ "engine->triggerCentral.triggerState", "engine->triggerCentral.vvtState[0][0]","engine->triggerCentral.vvtState[0][1]","engine->triggerCentral.vvtState[1][0]","engine->triggerCentral.vvtState[1][1]"]
 
@@ -203,7 +204,7 @@ Usages:
     output_name: [ "etb1", "etb2" ]
     constexpr: ["getLiveData<electronic_throttle_s>(0)", "getLiveData<electronic_throttle_s>(1)"]
     isPtr: true
-    conditional_compilation: "EFI_PROD_CODE && EFI_ELECTRONIC_THROTTLE_BODY"
+    conditional_compilation: "EFI_PROD_CODE && EFI_ELECTRONIC_THROTTLE_BODY && FULL_SD_LOGS"
 
   - name: wideband_state
     cppFileName: AemXSeriesLambda
