maximumIgnitionTiming does not account timing_offset_cylinder #5894
only:reducing confusion, or not?

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2522,8 +2522,8 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 	dialog = ignitionBasic, ""
 		field = "Enabled",						isIgnitionEnabled
 		field = "Mode",							ignitionMode, {isIgnitionEnabled}
-		field = "Maximum timing advance",		maximumIgnitionTiming, {isIgnitionEnabled}
-		field = "Minimum timing advance",		minimumIgnitionTiming, {isIgnitionEnabled}
+;todo https://github.com/rusefi/rusefi/issues/5894		field = "Maximum timing advance",		maximumIgnitionTiming, {isIgnitionEnabled}
+;todo https://github.com/rusefi/rusefi/issues/5894		field = "Minimum timing advance",		minimumIgnitionTiming, {isIgnitionEnabled}
 		field = "Individually wired Wasted Spark",				twoWireBatchIgnition, {isIgnitionEnabled == 1 && ignitionMode == @@ignition_mode_e_IM_WASTED_SPARK@@ }
 		field = "Override ignition table load axis",	ignOverrideMode, {isIgnitionEnabled}
 		field = "#Use fixed timing while validating with a timing gun"
