Check Engine output hidden since the whole feature pretty much does not exist only:uaefi

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1868,7 +1868,7 @@ gaugeCategory = GPPWM Outputs
 	indicator =				{ hasCriticalError },			"No errors",	"CRITICAL ERROR",  white,  black,	red,  black
 	indicator =						{ needBurn },	"Settings saved",	"Unsaved changes",  white,  black, yellow,  black
 	indicator =						{ isWarnNow },		"No warnings",			"Warning",  white,  black, yellow,  black
-	indicator =					{ checkEngine },	"No Check Engine",		"Check Engine",  white,  black,	red,  black
+;	indicator =					{ checkEngine },	"No Check Engine",		"Check Engine",  white,  black,	red,  black
 	indicator =					{ isTriggerError},			"Trigger OK",		"Trigger ERR",  white,  black,	red,  black
 	indicator = { fuelCutReasonBlinker  != 0 }, "Injection OK", { Fuel cut: bitStringValue(fuelIgnCutCodeList, fuelCutReason)}, white, black, yellow, black
 	indicator = { sparkCutReasonBlinker != 0 }, "Ignition OK",  { Ign cut: bitStringValue(fuelIgnCutCodeList, sparkCutReason)}, white, black, yellow, black
@@ -3303,7 +3303,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "ETB#2 Control",						etbIo2_controlPin	@@if_ts_show_etb_pins
 		field = "ETB#2 Disable",						etbIo2_disablePin	@@if_ts_show_etb_pins
 		field = "SD CS Pin",							sdCardCsPin @@if_ts_show_sd_card
-		field = "MIL/Check Engine output",			malfunctionIndicatorPin
+;		field = "MIL/Check Engine output",			malfunctionIndicatorPin
 		field = "Fan Pin",								fanPin
 		field = "A/C Relay",							acRelayPin
 		field = "Main Relay Pin",						mainRelayPin
