duplicate indicator? only:uaefi

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1859,13 +1859,9 @@ gaugeCategory = GPPWM Outputs
 	; this is required so that the "config error" feature works in TS
 	; DO NOT CHANGE THIS LINE - TS is looking for an indicator with particular text/styling
 	; you don't even have to show it by default
-	; DO NOT CHANGE THIS LINE
-	; DO NOT CHANGE THIS LINE
+	; DO NOT CHANGE THE LINE BELOW
 	indicator = { hasCriticalError }, "Config Error", "Config Error", white, black, red, black
-	; DO NOT CHANGE THIS LINE
-	; DO NOT CHANGE THIS LINE
-	; todo: do we want to drop this line since we have "config error" thing above?
-	indicator =				{ hasCriticalError },			"No errors",	"CRITICAL ERROR",  white,  black,	red,  black
+	; DO NOT CHANGE THE LINE ABOVE
 	indicator =						{ needBurn },	"Settings saved",	"Unsaved changes",  white,  black, yellow,  black
 	indicator =						{ isWarnNow },		"No warnings",			"Warning",  white,  black, yellow,  black
 ;	indicator =					{ checkEngine },	"No Check Engine",		"Check Engine",  white,  black,	red,  black
