canned tunes button should tell TS to refresh #7250 only:uaefi

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -5391,3 +5391,7 @@ dialog = tcuControls, "Transmission Settings"
 #else
  addTool = afrTableGenerator, "AFR Table Generator", afrTableTbl
 #endif
+
+
+[EventTriggers]
+  triggeredPageRefresh = 1, { triggerPageRefreshFlag }
