fuel level does not handle lack of ignition voltage #7254 only:uaefi

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -3220,6 +3220,8 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 
 	dialog = fuelLevelDialog,		"Fuel Level Sensor"
 		field = "Input channel",	fuelLevelSensor
+		field = "Low threshold",	fuelLevelLowThresholdVoltage, {fuelLevelSensor != @@ADC_CHANNEL_NONE@@}
+		field = "High threshold",	fuelLevelHighThresholdVoltage, {fuelLevelSensor != @@ADC_CHANNEL_NONE@@}
 		field = "Filter Alpha",		fuelLevelAveragingAlpha
 		field = "Update period",	fuelLevelUpdatePeriodSec
 		panel = fuelLevelCurve
