--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -619,6 +619,14 @@ enable2ndByteCanID = false
 		yBins		= etbBiasValues
 		gauge		= TPSGauge
 
+	curve = etbOpenSpeed, "Electronic TB Max Opening Speed Curve"
+		columnLabel = "RPM", "Max Speed"
+		xAxis		=  0, 50, 11
+		yAxis		=  -40, 40, 9
+		xBins		= pedalToTpsPedalBins, TPSValue
+		yBins		= etbMaxSpeed
+		gauge		= TPSGauge
+
 	curve = crankingTpsCurve, "Cranking TPS Multiplier"
 		columnLabel = "TPS", "Multiplier"
 		xAxis		=  0, 100, 11
@@ -2136,6 +2144,7 @@ menuDialog = main
 		subMenu = etbDialog,				"Electronic throttle body", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ } @@if_ts_show_etb
 		subMenu = etbTpsBiasCurve,			"ETB bias curve (feed forward)", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ } @@if_ts_show_etb_bias_curve
 		subMenu = pedalToTpsTbl,			@@pedalToTpsTbl_NAME@@ @@if_ts_show_etb
+		subMenu = etbOpenSpeed,				"ETB max opening speed curve", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ } @@if_ts_show_etb
 		subMenu = throttle2TrimTbl,			"ETB #2 Trim", { tps2_1AdcChannel != @@ADC_CHANNEL_NONE@@ } @@if_ts_show_tps2
 
 		subMenu = std_separator@@if_ts_show_vvt_output
