--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -619,12 +619,20 @@ enable2ndByteCanID = false
 		yBins		= etbBiasValues
 		gauge		= TPSGauge
 
-	curve = etbOpenSpeed, "Electronic TB Max Opening Speed Curve"
+	curve = etbOpenSpeedOpen, "Electronic TB Max Opening Speed Open Curve"
 		columnLabel = "RPM", "Max Speed"
 		xAxis		=  0, 50, 11
 		yAxis		=  -40, 40, 9
 		xBins		= pedalToTpsPedalBins, TPSValue
-		yBins		= etbMaxSpeed
+		yBins		= etbMaxSpeedOpen
+		gauge		= TPSGauge
+
+	curve = etbOpenSpeedClose, "Electronic TB Max Closing Speed Open Curve"
+		columnLabel = "RPM", "Max Speed"
+		xAxis		=  0, 50, 11
+		yAxis		=  -40, 40, 9
+		xBins		= pedalToTpsPedalBins, TPSValue
+		yBins		= etbMaxSpeedClose
 		gauge		= TPSGauge
 
 	curve = crankingTpsCurve, "Cranking TPS Multiplier"
@@ -2144,7 +2152,8 @@ menuDialog = main
 		subMenu = etbDialog,				"Electronic throttle body", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ } @@if_ts_show_etb
 		subMenu = etbTpsBiasCurve,			"ETB bias curve (feed forward)", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ } @@if_ts_show_etb_bias_curve
 		subMenu = pedalToTpsTbl,			@@pedalToTpsTbl_NAME@@ @@if_ts_show_etb
-		subMenu = etbOpenSpeed,				"ETB max opening speed curve", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ } @@if_ts_show_etb
+		subMenu = etbOpenSpeedOpen,			"ETB max opening speed curve", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ } @@if_ts_show_etb
+		subMenu = etbOpenSpeedClose,		"ETB max closing speed curve", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ } @@if_ts_show_etb
 		subMenu = throttle2TrimTbl,			"ETB #2 Trim", { tps2_1AdcChannel != @@ADC_CHANNEL_NONE@@ } @@if_ts_show_tps2
 
 		subMenu = std_separator@@if_ts_show_vvt_output
