only:java version docs

--- a/.github/workflows/build-simulator.yaml
+++ b/.github/workflows/build-simulator.yaml
@@ -30,6 +30,7 @@ jobs:
     - uses: actions/setup-java@v4
       with:
         distribution: 'zulu'
+        # using version 21 here just for fun. See build-tsplugin-body.yaml
         java-version: '17'
 
     - name: Generate docs and enums
