--- a/.github/workflows/custom-board-build/action.yaml
+++ b/.github/workflows/custom-board-build/action.yaml
@@ -299,6 +299,11 @@ runs:
         echo DONE: bootloader
         ls -l bootloader/blbuild
 
+    - name: Gradle tune-tools separately
+      working-directory: ${{inputs.rusefi_dir}}/java_tools
+      shell: bash
+      run: ./gradlew :tune-tools:shadowJar
+
     - name: Invoking Post-bootloader Action
       shell: bash
       run: |
@@ -313,7 +318,7 @@ runs:
       run: |
         : Build Firmware
         if [ "$RUN_SIMULATOR" == "true" ]; then
-          TARGETS=("../simulator/build/rusefi_simulator.linux" "../java_tools/tune-tools/build/libs/tune-tools-all.jar")
+          TARGETS=("../simulator/build/rusefi_simulator.linux")
         fi
         bash bin/compile.sh $BOARD_META_PATH --output-sync=recurse ${{inputs.artifacts}} ${{inputs.uploads}} ${TARGETS[@]}
 
