--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2420,6 +2420,12 @@ cmd_dfu						= "@@TS_IO_TEST_COMMAND_char@@\x00\xba\x00\x00"
 ; jump to OpenBLT bootloader
 cmd_openblt				= "@@TS_IO_TEST_COMMAND_char@@\x00\xbc\x00\x00"
 
+; SD card related
+cmd_mount_pc				= "@@TS_IO_TEST_COMMAND_char@@@@ts_14_command_TS_SD_MOUNT_PC_16_hex@@"
+cmd_mount_ecu				= "@@TS_IO_TEST_COMMAND_char@@@@ts_14_command_TS_SD_MOUNT_ECU_16_hex@@"
+cmd_unmount					= "@@TS_IO_TEST_COMMAND_char@@@@ts_14_command_TS_SD_UNMOUNT_16_hex@@"
+cmd_format					= "@@TS_IO_TEST_COMMAND_char@@@@ts_14_command_TS_SD_FORMAT_16_hex@@"
+
 ; See 'executeTSCommand' in firmware source code
 
 @@COMMANDS_FROM_FILE@@
