--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4372,7 +4372,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "# and USB not connected for 15 seconds"
 		field = "#rusEFI connects SD to your PC when powered by USB"
 		field = "Enable SD Card",						isSdCardEnabled
-		field = "alwaysWriteSdCard",      alwaysWriteSdCard, { isSdCardEnabled }
+		field = "Always start in Logging mode",			alwaysWriteSdCard, { isSdCardEnabled }
 		field = "CS Pin",								sdCardCsPin, { isSdCardEnabled }			@@if_ts_show_sd_pins
 		field = "SPI",									sdCardSpiDevice, { isSdCardEnabled }		@@if_ts_show_sd_pins
 		field = "SD logger rate",						sdCardLogFrequency, { isSdCardEnabled }
